--- a/pom.xml
+++ b/pom.xml
@@ -26,19 +26,19 @@
     <dependency>
       <groupId>org.apache.openejb</groupId>
       <artifactId>arquillian-tomee-remote</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>1.6.0.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.openejb</groupId>
       <artifactId>ziplock</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>1.6.0.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
       <artifactId>arquillian-junit-container</artifactId>
-      <version>1.1.5.Final</version>
+      <version>1.1.4.Final</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -57,7 +57,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tomcat.version>7.0.54</tomcat.version>
+    <tomcat.version>7.0.53</tomcat.version>
   </properties>
 
   <build>
